[project]
name = "cnpj-py"
version = "0.1.0"
description = "API para consulta de CNPJ (dados de empresa no Brasil)."
authors = [
    {name = "Erle Carrara", email = "carrara.erle@gmail.com"},
]
dependencies = [
    "requests>=2.28.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "requests-mock>=1.10.0",
]

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
